# storage/api-docs/api-docs.json
@@ -1788,6 +1788,40 @@
                 }
             }
         },
+        "/api/v1/payment-configurations/{pc_id}": {
+            "post": {
+                "tags": [
+                    "Payment API"
+                ],
+                "description": "delete a payment_configuration",
+                "operationId": "49ebe6dc80880315f433c56147648153",
+                "parameters": [
+                    {
+                        "name": "pc_id",
+                        "in": "path",
+                        "description": "the payment_configurations pc_id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": "10000"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "payment_configuration delete success",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error: bad request"
+                    }
+                }
+            }
+        },
         "/api/v1/paysoft/redirto": {
             "post": {
                 "tags": [
@@ -2558,6 +2592,46 @@
                             }
                         }
                     },
+                    "400": {
+                        "description": "Error: bad request"
+                    }
+                }
+            }
+        },
+        "/api/v1/refund": {
+            "post": {
+                "tags": [
+                    "Payment API"
+                ],
+                "description": "create a new refund request",
+                "operationId": "2cb41394b31d9c58ad95db0fd38babd1",
+                "responses": {
+                    "400": {
+                        "description": "Error: bad request"
+                    }
+                }
+            }
+        },
+        "/api/v1/transaction_items_and_refunds/{ti_xref_f_id}": {
+            "get": {
+                "tags": [
+                    "Payment API"
+                ],
+                "description": " Get all Refund Transaction Items",
+                "operationId": "24ff0f241df8ffda0d9313971d558adc",
+                "parameters": [
+                    {
+                        "name": "ti_xref_f_id",
+                        "in": "query",
+                        "description": "Form ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": "10000"
+                        }
+                    }
+                ],
+                "responses": {
                     "400": {
                         "description": "Error: bad request"
                     }
